--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-<title>Your Shopping Cart</title>
+<title>Pagination</title>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
-<link href="test.css" rel="stylesheet">
+<link href="index.css" rel="stylesheet">
+<script src="pagination.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <body ng-app="app">
 	<div ng-controller="MainCtrl" >
